# neural-codegen

./: .gitignore  Cargo.toml  README.md  manifesto.md  paper.md  quick-start.sh  verify.sh
crates/nc-codegen/: Cargo.toml
crates/nc-codegen/examples/: api-gen.rs  benchmark.rs  llm-gen.rs
crates/nc-codegen/src/: lib.rs
crates/nc-ir/: Cargo.toml
crates/nc-ir/src/: lib.rs
crates/nc-parser/: Cargo.toml
crates/nc-parser/src/: lib.rs
docs/: 00-origin.md  01-why-debug.md  02-lambda-calculus.md  03-turing-vs-lambda.md  04-gpu-mode.md  05-implementation.md  06-extension.md  07-2026-context.md  08-parallelism-confluence.md  09-instruction-set-evolution.md  formal-analysis.md
