[package]
name = "nc-codegen"
version = "0.1.0"
edition = "2021"
description = "Deterministic Rust code generator for Neural Codegen — IR to compilable source via template lookup"
license = "MIT"

[dependencies]
nc-ir = { path = "../nc-ir" }
nc-parser = { path = "../nc-parser" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[example]]
name = "api-gen"
required-features = []

[[example]]
name = "llm-gen"
required-features = []

[[example]]
name = "benchmark"
required-features = []
